--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,59 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+ background-color: rgb(56, 42, 30);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.page-container{
+ display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+height: 100vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inventory-container{
+ display: grid;
+grid-template-columns: repeat(3, 1fr);
+ 
+
+ width: 50%;
+height: 50%;
+
+ background-color: rgb(131, 92, 56);
+border: 10px solid rgb(80, 44, 10) ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.inventory-item{
+ display: flex;
+ flex-direction: column;
+ background-color: rgb(175, 141, 77);
+
+ align-self: center;
+ justify-self: center;
+ align-items: center;
+justify-content: center;
+
+height: 80%;
+ width: 80%;
+
+overflow: hidden;
 }
 
-.card {
-  padding: 2em;
+.spawn-button{
+ background-color: rgb(194, 153, 111);
+width: 14rem;
+height: 6rem;
+ border: 3px solid rgb(133, 74, 15);
+color: rgb(87, 49, 10);
+
+ font-size: 1rem;
+ font-family: 'Cambria';
+
+ margin: 3rem 0 ;
+ 
 }
 
-.read-the-docs {
-  color: #888;
+.item-photo{
+ width: 3rem;
+height: 3rem;
 }
